--- a/package.json
+++ b/package.json
@@ -32,6 +32,14 @@
     "google-auth-library": "^10.5.0",
     "nodemailer": "^7.0.12",
     "pino-pretty": "^13.1.3",
-    "winston": "^3.19.0"
+    "winston": "^3.19.0",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.19",
+    "@types/node": "^20.10.0",
+    "prisma": "^5.7.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
