--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "- Para se tornar um comprador, o usuário deve estar cadastrado.\r - Para estar cadastrado deve informar: nome, senha, número de telefone, email.\r - O cadastro é finalizado quando o email e o número de telefone forem verificados.\r - Dados sensíveis do usuário devem ser armazenados de forma segura.",
   "main": "index.js",
   "scripts": {
+        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
