--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.29.1",
     "google-auth-library": "^10.5.0",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.0",
     "nodemailer": "^7.0.12",
     "pino-pretty": "^13.1.3",
@@ -42,7 +43,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.0",
+    "@types/nodemailer": "^7.0.4",
     "prisma": "^5.7.0",
     "ts-node-dev": "^2.0.0"
   }
