--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.29.1",
     "google-auth-library": "^10.5.0",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.0",
     "nodemailer": "^7.0.12",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/joi": "^17.2.2",
     "ts-node-dev": "^2.0.0"
   }
 }
