--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "description": "- Para se tornar um comprador, o usuário deve estar cadastrado.\r - Para estar cadastrado deve informar: nome, senha, número de telefone, email.\r - O cadastro é finalizado quando o email e o número de telefone forem verificados.\r - Dados sensíveis do usuário devem ser armazenados de forma segura.",
   "main": "index.js",
   "scripts": {
+    "prisma:generate":"prisma generate",
+    "prisma:migrate":"prisma migrate",
+    "clean":"rm -rf dist node_modules/.prisma node_modules/.cache",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc",
+    "build": "npm run prisma:generate && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "postinstall": "prisma generate"
+  },
+   "prisma": {
+    "schema": "prisma/schema.prisma"
   },
   "repository": {
     "type": "git",
