--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@ coverage/
 
 # Backup files
 *.backup
+
+# No seu arquivo .gitignore, adicione:
+scripts/setup-database.js
+# Ou para ignorar toda a pasta scripts:
+scripts/
